--- a/app/ob/templates/base.html
+++ b/app/ob/templates/base.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="static/css/style.css"/>
 	<title>
 		{% block title %}
 			OBANA
@@ -22,21 +22,21 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Форум<span class="sr-only">(current)</span></a>
+					<a type="button" class="btn btn-outline-secondary" href="#">Форум<span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">О нас</a>
+					<a type="button" class="btn btn-outline-secondary" href="#">О нас</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Магазин</a>
+					<a type="button" class="btn btn-outline-secondary" href="#">Магазин</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Калькулятор</a>
+					<a type="button" class="btn btn-outline-secondary" href="#">Калькулятор</a>
 				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
 				<input class="form-control mr-sm-2" type="search" placeholder="Найти..." aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Найти</button>
+				<button style="border: 1px solid black;" class="btn btn-light my-2 my-sm-0" type="submit">Найти</button>
 			</form>
 		</div>
 	</nav>
