--- a/app/ob/templates/reg/login.html
+++ b/app/ob/templates/reg/login.html
@@ -1,3 +1,10 @@
+{% extends 'templates/base.html'%}
+   
+{% block title %}
+    Home page content
+{% endblock %}
+
+   
 {% block content %}
-				Home page content
-			{% endblock %}
+
+{% endblock %}
