--- a/app/ob/templates/base.html
+++ b/app/ob/templates/base.html
@@ -30,10 +30,10 @@
   		<div style="background-color: #737373;min-height: 100vh;" class="col-md-2 col-lg-2">
 <div style="margin-top: 5%" class="menu">
 <div class="fancy-hover">
-  <a href=""><i class="fa fa-home" aria-hidden="true"></i>Главная</a>
+  <a href="{% url 'home' %}"><i class="fa fa-home" aria-hidden="true"></i>Главная</a>
 </div>
 <div class="fancy-hover">
-  <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i>Магазин</a>
+  <a href="{% url 'shop' %}"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Магазин</a>
 </div>
 <div class="fancy-hover">
   <a href=""><i class="fa fa-comments-o" aria-hidden="true"></i>Форум</a>
