--- a/app/ob/account/templates/account/login.html
+++ b/app/ob/account/templates/account/login.html
@@ -2,7 +2,28 @@
 
 
 {% block content %}
- 	<h1>hello !</h1>
+  <form style="margin-top: 5%" class="px-5 py-5">
+    <div style="width: 30%;" class="form-group">
+      <label for="exampleDropdownFormEmail1">Введите email</label>
+      <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@mail.ru">
+    </div>
+    <div style="width: 30%;" class="form-group">
+      <label for="exampleDropdownFormPassword1">Введите пароль</label>
+      <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Пароль">
+    </div>
+    <div class="form-group">
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="dropdownCheck">
+        <label class="form-check-label" for="dropdownCheck">
+          Запомнить меня
+        </label>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Войти</button>
+  </form>
+  <div class="dropdown-divider"></div>
+  <a class="dropdown-item" href="{% url 'registration' %}">Нет аккаунта? Пройди регистрацию!</a>
+  <a class="dropdown-item" href="#">Забыл пароль?</a>
 {% endblock %}
 
 {% block title %}
