--- a/app/ob/account/templates/account/register.html
+++ b/app/ob/account/templates/account/register.html
@@ -1,8 +1,21 @@
 {% extends 'templates/base.html'%}
-
+{% load static %}
 
 {% block content %}
- 	<h1>worldhtsrhst!</h1>
+<div style="margin-top: 5%">
+<div class="card" style="width: 18rem;float:left;margin-left: 20%">
+  <img src="{% static 'img/fiz.png' %}" class="card-img-top" alt="...">
+  <div class="card-body">
+    <a href="#"><button style="margin-right: 4%" type="button" class="btn btn-outline-dark">Юридическое лицо</button></a>
+  </div>
+</div>
+<div class="card" style="width: 18rem;float:right;margin-right: 20%">
+  <img src="{% static 'img/fizi.jpg' %}" class="card-img-top" alt="...">
+  <div class="card-body">
+    <a href="#"><button type="button" class="btn btn-outline-dark">Физическое лицо</button></a>
+  </div>
+</div>
+</div>
 {% endblock %}
 
 {% block title %}
