--- a/app/ob/static/css/style.css
+++ b/app/ob/static/css/style.css
@@ -8,9 +8,19 @@ header{
     background-color: #EDEEF0;
 }
 a {
-  color: #C2C2C4 !important;
+  color: #7C7C7D !important;
   text-decoration: none
 }
+
+.a_menu{
+  color: #D8D9DB !important;
+  text-decoration: none
+}
+.a_logo{
+    color: #B0B1B2 !important;
+  text-decoration: none
+}
+
 .fancy-hover {
   background: #EDEEF0;
   background: rgba(100,100,100,0.9);
