--- a/app/ob/templates/base.html
+++ b/app/ob/templates/base.html
@@ -9,60 +9,54 @@
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 	<title>
 		{% block title %}
-			Obana-rus.com
+		Obana-rus.com
 		{% endblock %}
 	</title>
 </head>
 <body>
-<header>
-	{% block autoresation %}
+	<header>
+		{% block autoresation %}
 		<div style="float:right;margin-top: 2%;margin-right: 2%">
-    	<a href="{% url 'autorisation' %}"><button type="button" class="btn btn-outline-dark" >Вход</button></a>
-    	<a href="{% url 'registration' %}"><button type="button" class="btn btn-outline-dark" >Регистрация</button></a>
-    </div>
-	{% endblock %}
-	<div class="container11"><a class="border-animation" href="/">
-      <div class="border-animation__inner"><p class="a_logo">obAna</p></div></a>
-    </div>
-</header>
-<section>
-  <div class="container-fluid">
-  	<div class="row">
-  		<div style="background-color: #737373;min-height: 100vh;" class="col-md-2 col-lg-2">
-<div style="margin-top: 5%" class="menu">
-<div class="fancy-hover">
-<<<<<<< HEAD
-  <a class="a_menu" href=""><i class="fa fa-home" aria-hidden="true"></i>Главная</a>
-</div>
-<div class="fancy-hover">
-  <a class="a_menu" href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i>Магазин</a>
-=======
-  <a href="{% url 'home' %}"><i class="fa fa-home" aria-hidden="true"></i>Главная</a>
-</div>
-<div class="fancy-hover">
-  <a href="{% url 'shop' %}"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Магазин</a>
->>>>>>> 06f6f6344bf58b8dc4ecddcf7ec074278d7f3489
-</div>
-<div class="fancy-hover">
-  <a class="a_menu" href=""><i class="fa fa-comments-o" aria-hidden="true"></i>Форум</a>
-</div>
-<div class="fancy-hover">
-  <a class="a_menu" href=""><i class="fa fa-globe" aria-hidden="true"></i>О нас</a>
-</div>
-<div class="fancy-hover">
-  <a class="a_menu" href=""><i class="fa fa-calculator" aria-hidden="true"></i>Калькулятор</a>
-</div>
-<div class="fancy-hover">
-  <a class="a_menu" href=""><i class="fa fa-trash-o" aria-hidden="true"></i>Галерея</a>
-</div>
-</div>
+			<a href="{% url 'autorisation' %}"><button type="button" class="btn btn-outline-dark" >Вход</button></a>
+			<a href="{% url 'registration' %}"><button type="button" class="btn btn-outline-dark" >Регистрация</button></a>
 		</div>
-		<div  align="center" class="col-md-10 col-lg-10" >
-			{% block content %}
-				Home page content
-			{% endblock %}
+		{% endblock %}
+		<div class="container11"><a class="border-animation" href="/">
+			<div class="border-animation__inner"><p class="a_logo">obAna</p></div></a>
 		</div>
-	</div>
-  </div>
-</body>
-</html>
+	</header>
+	<section>
+		<div class="container-fluid">
+			<div class="row">
+				<div style="background-color: #737373;min-height: 100vh;" class="col-md-2 col-lg-2">
+					<div style="margin-top: 5%" class="menu">
+						<div class="fancy-hover">
+							<a class="a_menu" href=""><i class="fa fa-home" aria-hidden="true"></i>Главная</a>
+						</div>
+
+						<div class="fancy-hover">
+							<a class="a_menu" href="{% url 'shop' %}"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Магазин</a>
+						</div>
+						<div class="fancy-hover">
+							<a class="a_menu" href=""><i class="fa fa-comments-o" aria-hidden="true"></i>Форум</a>
+						</div>
+						<div class="fancy-hover">
+							<a class="a_menu" href=""><i class="fa fa-globe" aria-hidden="true"></i>О нас</a>
+						</div>
+						<div class="fancy-hover">
+							<a class="a_menu" href=""><i class="fa fa-calculator" aria-hidden="true"></i>Калькулятор</a>
+						</div>
+						<div class="fancy-hover">
+							<a class="a_menu" href=""><i class="fa fa-trash-o" aria-hidden="true"></i>Галерея</a>
+						</div>
+					</div>
+				</div>
+				<div  align="center" class="col-md-10 col-lg-10" >
+					{% block content %}
+					Home page content
+					{% endblock %}
+				</div>
+			</div>
+		</div>
+	</body>
+	</html>
