--- a/app/ob/account/templates/account/register.html
+++ b/app/ob/account/templates/account/register.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+<br><h3>Виберите тип регистрации!</h3>
 <div style="margin-top: 5%">
 <div class="card" style="width: 18rem;float:left;margin-left: 20%">
   <img src="{% static 'img/fiz.png' %}" class="card-img-top" alt="...">
