--- a/app/ob/templates/base.html
+++ b/app/ob/templates/base.html
@@ -13,7 +13,7 @@
 		{% endblock %}
 	</title>
 </head>
-<body>
+<body style="background:url({% static 'img/fon.jpg' %});background-attachment: fixed;">
 	<header>
 		{% block autoresation %}
 		<div style="float:right;margin-top: 2%;margin-right: 2%">
