--- a/app/ob/account/templates/account/jur.html
+++ b/app/ob/account/templates/account/jur.html
@@ -4,41 +4,41 @@
 {% block content %}
 	<form style="margin-top: 5%" class="px-5 py-5">
 <div style="width: 50%;float:left;">
-    <div class="col-md-9 mb-3 has-error">
+    <div class="col-md-9 mb-3">
         <label for="inputAddress">Ваш номер телефона</label>
-        <input type="text" class="form-control" id="validationCustom01" placeholder="Номер">
+        <input type="text" class="form-control" id="inputmobil" placeholder="Номер">
     </div>
-    <div class="col-md-9 mb-3 has-error">
+    <div class="col-md-9 mb-3">
         <label for="inputAddress">Ваш адрес</label>
-        <input type="text" class="form-control" id="validationCustom01" placeholder="Адрес">
+        <input type="text" class="form-control" id="inputAddress" placeholder="Адрес">
     </div>
-    <div class="col-md-9 mb-3 has-error">
+    <div class="col-md-9 mb-3">
       <label for="exampleDropdownFormEmail1">Введите email</label>
       <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@mail.ru">
     </div>
-    <div class="col-md-9 mb-3 has-error">
+    <div class="col-md-9 mb-3">
       <label for="validationCustom01">Название организации</label>
       <input type="text" class="form-control" id="validationCustom01" placeholder="Название" required>
     </div>
-    <div class="col-md-9 mb-3 has-error">
+    <div class="col-md-9 mb-3">
       <label for="validationCustom01">ОГРНИП</label>
-      <input title="Введите если у вас ИП" type="text" class="form-control" id="validationCustom01" placeholder="ОГРНИП" required>
+      <input title="Введите если у вас ИП" type="text" class="form-control" id="validationCustom01" placeholder="Если у вас ИП заполните это поле" required>
     </div>
     </div>
     <div style="width: 50%;float:right;">
-    <div class="col-md-9 mb-3 has-error">
+    <div class="col-md-9 mb-3">
       <label for="validationCustom01">КПП</label>
-      <input title="Введите если у вас OOO" type="text" class="form-control" id="validationCustom01" placeholder="КПП" required>
+      <input title="Введите если у вас OOO" type="text" class="form-control" id="validationCustom01" placeholder="Если у вас ООО заполните это поле" required>
     </div>
-    <div class="col-md-9 mb-3 has-error">
+    <div class="col-md-9 mb-3">
       <label for="validationCustom01">ИНН</label>
       <input type="text" class="form-control" id="validationCustom01" placeholder="ИНН" required>
     </div>
-    <div class="col-md-9 mb-3 has-error">
+    <div class="col-md-9 mb-3">
       <label for="exampleDropdownFormPassword1">Введите пароль</label>
       <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Пароль">
     </div>
-    <div class="col-md-9 mb-3 has-error">
+    <div class="col-md-9 mb-3">
       <label for="exampleDropdownFormPassword1">Введите пароль еще раз</label>
       <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Пароль">
     </div>
