--- a/app/ob/forum/templates/forum/forum.html
+++ b/app/ob/forum/templates/forum/forum.html
@@ -2,8 +2,10 @@
 {% load static %} 
 
 {% block content %}
-<div style="outline: 2px solid #979797;margin-top: 2%">
-   <h3 style="outline: 2px solid #979797;" align=left>Магазин</h3>
+<div style="outline: 2px solid #979797;">
+   <div style="outline: 2px solid #979797;margin-top: 1%">
+   <h3 align=left>Магазин<a href=""><button style="margin-bottom: 1%;margin-left: 5%" type="button" class="btn btn-light">Создать новую тему</button></a></h3>
+   </div>
     <table style="width: 100%;">
        <thead style="background: #EDEEF0">
         <tr>
@@ -27,8 +29,10 @@
        </tbody>
     </table>
 </div>
-<div style="outline: 2px solid #979797;margin-top: 2%">
-   <h3 style="outline: 2px solid #979797;" align=left>Проектировщики</h3>
+<div style="outline: 2px solid #979797;">
+   <div style="outline: 2px solid #979797;margin-top: 1%">
+   <h3 align=left>Проектировщики<a href=""><button style="margin-bottom: 1%;margin-left: 5%" type="button" class="btn btn-light">Создать новую тему</button></a></h3>
+   </div>
     <table style="width: 100%;">
        <thead style="background: #EDEEF0">
         <tr>
@@ -52,8 +56,10 @@
        </tbody>
     </table>
 </div>
-<div style="outline: 2px solid #979797;margin-top: 2%">
-   <h3 style="outline: 2px solid #979797;" align=left>Дизайнеры</h3>
+<div style="outline: 2px solid #979797;">
+   <div style="outline: 2px solid #979797;margin-top: 1%">
+   <h3 align=left>Дизайнеры<a href=""><button style="margin-bottom: 1%;margin-left: 5%" type="button" class="btn btn-light">Создать новую тему</button></a></h3>
+   </div>
     <table style="width: 100%;">
        <thead style="background: #EDEEF0">
         <tr>
@@ -77,8 +83,10 @@
        </tbody>
     </table>
 </div>
-<div style="outline: 2px solid #979797;margin-top: 2%">
-   <h3 style="outline: 2px solid #979797;" align=left>Мебельщики</h3>
+<div style="outline: 2px solid #979797;">
+   <div style="outline: 2px solid #979797;margin-top: 1%">
+   <h3 align=left>Мебельщики<a href=""><button style="margin-bottom: 1%;margin-left: 5%" type="button" class="btn btn-light">Создать новую тему</button></a></h3>
+   </div>
     <table style="width: 100%;">
        <thead style="background: #EDEEF0">
         <tr>
@@ -102,8 +110,10 @@
        </tbody>
     </table>
 </div>
-<div style="outline: 2px solid #979797;margin-top: 2%">
-   <h3 style="outline: 2px solid #979797;" align=left>Столяра</h3>
+<div style="outline: 2px solid #979797;">
+   <div style="outline: 2px solid #979797;margin-top: 1%">
+   <h3 align=left>Столяра<a href=""><button style="margin-bottom: 1%;margin-left: 5%" type="button" class="btn btn-light">Создать новую тему</button></a></h3>
+   </div>
     <table style="width: 100%;">
        <thead style="background: #EDEEF0">
         <tr>
